--- a/server/game/404.html
+++ b/server/game/404.html
@@ -1,2 +1,9 @@
-﻿<h1>Not Found</h1>
-The requested URL <i>{URL}</i> was not found on this server.
+﻿<html>
+    <head>
+        <title>404 - Page not found</title>
+    </head>
+    <body>
+        <h1>Not Found</h1>
+        The requested URL <i>/404.html</i> was not found on this server.
+    </body>
+</html>
