--- a/server/game/TestingIsOffline.html
+++ b/server/game/TestingIsOffline.html
@@ -1,62 +1,53 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
-    <meta http-equiv="PRAGMA" content="NO-CACHE" />
-    <meta http-equiv="Expires" content="-1" />
-
-    <title>Fabiano Swagger of Doom</title>
-    <script language="JavaScript" type="text/javascript">
-var g_cacheBuster = "__rotmg_cb=1403286969";
-    </script>
-    <script src="js/AC_OETags.js?__rotmg_cb=1403286969" language="javascript"></script>
-    <script src="js/jquery-1.8.0.min.js?__rotmg_cb=1403286969" language="javascript"></script>
-    <script src="js/rotmg.UrlLib.js?__rotmg_cb=1403286969" language="javascript"></script>
-    <script src="js/rotmg.KabamPayment.js?__rotmg_cb=1403286969" language="javascript"></script>
-    <script src="js/rotmg.Marketing.js?__rotmg_cb=1403286969" language="javascript"></script>
-    <script src="js/rotmg.SalesForce.js?__rotmg_cb=1403286969" language="javascript"></script>
-    <link href="css/rotmg.common.css?__rotmg_cb=1403286969" type="text/css" rel="stylesheet" />
-
-    <style>
-        body {
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
+        <meta http-equiv="PRAGMA" content="NO-CACHE" />
+        <meta http-equiv="Expires" content="-1" />
+        <title>Fabiano Swagger of Doom</title>
+        <script language="JavaScript" type="text/javascript">
+            var g_cacheBuster = "__rotmg_cb=1403286969";
+                
+        </script>
+        <script src="js/AC_OETags.js?__rotmg_cb=1403286969" language="javascript"></script>
+        <script src="js/jquery-1.8.0.min.js?__rotmg_cb=1403286969" language="javascript"></script>
+        <script src="js/rotmg.UrlLib.js?__rotmg_cb=1403286969" language="javascript"></script>
+        <script src="js/rotmg.KabamPayment.js?__rotmg_cb=1403286969" language="javascript"></script>
+        <script src="js/rotmg.Marketing.js?__rotmg_cb=1403286969" language="javascript"></script>
+        <script src="js/rotmg.SalesForce.js?__rotmg_cb=1403286969" language="javascript"></script>
+        <link href="css/rotmg.common.css?__rotmg_cb=1403286969" type="text/css" rel="stylesheet" />
+        <style>
+            body {
             margin: 0;
             padding: 0;
             overflow: hidden;
             background-color: #000;
             color: #fff;
-        }
-
-        :link {
+            }
+            :link {
             color: #ccf;
-        }
-
-        :visited {
+            }
+            :visited {
             color: #fcf;
-        }
-
-        .footer {
+            }
+            .footer {
             margin: 16px auto;
             width: 416px;
-        }
-
-            .footer .studio {
-                float: left;
-                margin-right: 24px;
             }
-
-                .footer .studio.kabam {
-                    float: left;
-                    margin-top: 7px;
-                }
-
-                .footer .studio.last {
-                    margin-right: 0px;
-                }
-
-        .KBPAY_IframeDialogCurtain {
+            .footer .studio {
+            float: left;
+            margin-right: 24px;
+            }
+            .footer .studio.kabam {
+            float: left;
+            margin-top: 7px;
+            }
+            .footer .studio.last {
+            margin-right: 0px;
+            }
+            .KBPAY_IframeDialogCurtain {
             position: absolute;
             width: 2000px;
             top: 0;
@@ -66,26 +57,25 @@ var g_cacheBuster = "__rotmg_cb=1403286969";
             opacity: .30;
             filter: alpha(opacity=30);
             -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-        }
-
-        .KBPAY_IframeDialog {
+            }
+            .KBPAY_IframeDialog {
             position: absolute;
-        }
-    </style>
-    <script language="JavaScript" type="text/javascript">
-<!--
-// -----------------------------------------------------------------------------
-// Globals
-// Major version of Flash required
-var requiredMajorVersion = 11;
-// Minor version of Flash required
-var requiredMinorVersion = 2;
-// Minor version of Flash required
-var requiredRevision = 0;
-// -----------------------------------------------------------------------------
-// -->
-    </script>
-
+            }
+        </style>
+        <script language="JavaScript" type="text/javascript">
+            <!--
+                // -----------------------------------------------------------------------------
+                // Globals
+                // Major version of Flash required
+                var requiredMajorVersion = 11;
+                // Minor version of Flash required
+                var requiredMinorVersion = 2;
+                // Minor version of Flash required
+                var requiredRevision = 0;
+                // -----------------------------------------------------------------------------
+                // -->
+                
+        </script>
     <body>
         <center>
             <img src="TestingIsOffline.png" />
