--- a/server/game/index.html
+++ b/server/game/index.html
@@ -1,47 +1,75 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE" />
-        <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE" />
-        <META HTTP-EQUIV="Expires" CONTENT="-1" />
-        <title>Fabiano Swagger of Doom</title>
-        <script language="JavaScript" type="text/javascript">
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
+    <meta http-equiv="PRAGMA" content="NO-CACHE" />
+    <meta http-equiv="Expires" content="-1" />
+    <title>Fabiano Swagger of Doom</title>
+    <script language="JavaScript" type="text/javascript">
             var g_cacheBuster = "__rotmg_cb=1403286969";
-        </script>
-        <script src="js/AC_OETags.js?__rotmg_cb=1403286969" language="javascript"></script>
-        <script src="js/jquery-1.8.0.min.js?__rotmg_cb=1403286969" language="javascript"></script>
-        <script src="js/rotmg.UrlLib.js?__rotmg_cb=1403286969" language="javascript"></script>
-        <script src="js/rotmg.KabamPayment.js?__rotmg_cb=1403286969" language="javascript"></script>
-        <script src="js/rotmg.Marketing.js?__rotmg_cb=1403286969" language="javascript"></script>
-        <script src="js/rotmg.SalesForce.js?__rotmg_cb=1403286969" language="javascript"></script>
-        <link href="css/rotmg.common.css?__rotmg_cb=1403286969" type="text/css" rel="stylesheet" />
-        <style>
-            body { margin: 0; padding: 0; overflow: hidden;
-            background-color: #000; color: #fff; }
-            :link { color: rgb(128, 0, 128); }
-            :visited { color: rgb(128, 0, 128);; }
-            .footer { margin: 16px auto; width: 416px; }
-            .footer .studio { float: left; margin-right: 24px; }
-            .footer .studio.kabam { float: left; margin-top: 7px; }
-            .footer .studio.last { margin-right: 0px; }
-            .KBPAY_IframeDialogCurtain {
+    </script>
+    <script src="js/AC_OETags.js?__rotmg_cb=1403286969" language="javascript"></script>
+    <script src="js/jquery-1.8.0.min.js?__rotmg_cb=1403286969" language="javascript"></script>
+    <script src="js/rotmg.UrlLib.js?__rotmg_cb=1403286969" language="javascript"></script>
+    <script src="js/rotmg.KabamPayment.js?__rotmg_cb=1403286969" language="javascript"></script>
+    <script src="js/rotmg.Marketing.js?__rotmg_cb=1403286969" language="javascript"></script>
+    <script src="js/rotmg.SalesForce.js?__rotmg_cb=1403286969" language="javascript"></script>
+    <link href="css/rotmg.common.css?__rotmg_cb=1403286969" type="text/css" rel="stylesheet" />
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #000;
+            color: #fff;
+        }
+
+        :link {
+            color: #ccf;
+        }
+
+        :visited {
+            color: #fcf;
+        }
+
+        .footer {
+            margin: 16px auto;
+            width: 416px;
+        }
+
+            .footer .studio {
+                float: left;
+                margin-right: 24px;
+            }
+
+                .footer .studio.kabam {
+                    float: left;
+                    margin-top: 7px;
+                }
+
+                .footer .studio.last {
+                    margin-right: 0px;
+                }
+
+        .KBPAY_IframeDialogCurtain {
             position: absolute;
             width: 2000px;
-            top:0;
-            left:0;
-            background-color:#000;
-            -moz-opacity:0.3;
-            opacity:.30;
-            filter:alpha(opacity=30);
-            -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-            }
-            .KBPAY_IframeDialog {
+            top: 0;
+            left: 0;
+            background-color: #000;
+            -moz-opacity: 0.3;
+            opacity: .30;
+            filter: alpha(opacity=30);
+            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+        }
+
+        .KBPAY_IframeDialog {
             position: absolute;
-            }
-        </style>
-        <script language="JavaScript" type="text/javascript">
+        }
+    </style>
+    <script language="JavaScript" type="text/javascript">
             <!--
                 // -----------------------------------------------------------------------------
                 // Globals
@@ -53,19 +81,16 @@
                 var requiredRevision = 0;
                 // -----------------------------------------------------------------------------
                 // -->
-        </script>
+    </script>
     <body>
         <center>
             <script language="JavaScript" type="text/javascript">
                 <!--
                     rotmg.Marketing.track("landing");
-
                     // Version check for the Flash Player that has the ability to start Player Product Install (6.0r65)
                     var hasProductInstall = DetectFlashVer(6, 0, 65);
-
                     // Version check based upon the values defined in globals
                     var hasRequestedVersion = DetectFlashVer(requiredMajorVersion, requiredMinorVersion, requiredRevision);
-
                     if ( hasProductInstall && !hasRequestedVersion ) {
                     	// DO NOT MODIFY THE FOLLOWING FOUR LINES
                     	// Location visited after installation is complete if installation is required
@@ -73,7 +98,6 @@
                     	var MMredirectURL = window.location;
                         // document.title = document.title.slice(0, 47) + " - Flash Player Installation";
                         var MMdoctitle = document.title;
-
                     	AC_FL_RunContent(
                     		"src", "playerProductInstall",
                     		"FlashVars", "MMredirectURL="+MMredirectURL+'&MMplayerType='+MMPlayerType+'&MMdoctitle='+MMdoctitle+""+'&version_timestamp=1403286969',
@@ -110,28 +134,28 @@
                     			"style", "outline:none"
                     	);
                       } else {  // flash is too old or we can't detect the plugin
-                        var alternateContent = 'Playing Fabiano Swagger of Doom requires Flash. <a href=http://www.adobe.com/go/getflash />Get Flash</a>';
+                        var alternateContent = 'Playing Fabiano Swagger of Doom requires Flash. <a href=http://www.adobe.com/go/getflash/>Get Flash</a>';
                         document.write(alternateContent);  // insert non-flash content
                       }
                     // -->
             </script>
             <noscript>
                 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-                    id="client" width="640" height="640" class="game_swf"
-                    codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
+                        id="client" width="640" height="640" class="game_swf"
+                        codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
                     <param name="movie" value="{GAMECLIENT}.swf" />
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#000000" />
                     <param name="wmode" value="direct" />
                     <param name="allowScriptAccess" value="sameDomain" />
                     <embed src="{GAMECLIENT}.swf" quality="high" bgcolor="#000000"
-                        width="800" height="600" name="{GAMECLIENT}" align="middle"
-                        play="true"
-                        loop="false"
-                        quality="high"
-                        allowscriptaccess="sameDomain"
-                        type="application/x-shockwave-flash"
-                        pluginspage="http://www.adobe.com/go/getflashplayer">
+                           width="800" height="600" name="{GAMECLIENT}" align="middle"
+                           play="true"
+                           loop="false"
+                           quality="high"
+                           allowscriptaccess="sameDomain"
+                           type="application/x-shockwave-flash"
+                           pluginspage="http://www.adobe.com/go/getflashplayer">
                     </embed>
                 </object>
             </noscript>
@@ -146,7 +170,7 @@
                     <a href="http://wildshadow.com/" target="_blank"><img align=center src="logowtext.png" width="200" height="104" border="0"><br />Wild Shadow Studios</a>
                 </div>
                 <div class="muledump">
-                    <center><font size="7"><a href="http://25.48.226.249:8080/login.html" target="_blank">Muledump</a></font></center>
+                    <center><font size="7"><a href="http://25.103.138.168:8080/login.html" target="_blank">Muledump</a></font></center>
                 </div>
             </div>
         </center>
